--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -252,7 +252,7 @@ TODO import generated `js` / `css` in `.storybook/preview.js`
 
 ### Add `package.json` `scripts`
 
-Good `scripts` entries in your `package.json` help new users while learning about your Design System, while also offering way better developer experience for everyone else. Aggregated commands to quickly start everything in development / watch mode, compile everything for production, or generting a new release abstract complexities away from the average developer, while granular commands used by those aggregate commands allow for maximum flexibility.
+Good `scripts` entries in your `package.json` help new users when learning about your Design System, while also offering way better developer experience for everyone else. Aggregated commands to quickly start everything in development / watch mode, to compile everything for production, or for generating a new release mean taking complexities away from the average developer, while granular commands, used by those aggregate commands under the hood, allow for maximal flexibility.
 
 TODO aggregated `yarn start`, for example
 
