--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -9,7 +9,7 @@ import { TextMedia } from '@kickstartds/base/lib/text-media';
 
 # Adapt `Button` component
 
-This guide shows how you'd typically add components to your Design System that are directly based on components part of **kickstartDS**. This mostly includes components that are needed in every Design System, and that typically also get added with the same name (like our `Button` here).
+This guided example shows how you'd typically add components to your Design System that are directly based on components part of **kickstartDS**. This mostly includes components that are needed in every Design System, and that typically also get added with the same name (like our `Button` here).
 
 Even while directly pulling the component, including its name, from **kickstartDS**, you'll want to find the correct set of properties for your own use cases. Components in **kickstartDS** come equipped with properties for a wide range of possible use cases, so it makes sense to reduce those to the ones you really need... to make components easier to understand, use and reason about!
 
@@ -19,22 +19,23 @@ We call this type of workflow **Adaptation**. Learn more about it in [our dedica
 
 TODO intro description
 
+This is how the result of this guide will look like:
+
 <iframe
   src="https://60dc476b80673e003b4258d6-czyzkgbgek.chromatic.com/iframe.html?args=&id=base-button--solid&viewMode=story"
   width="200"
   height="80"
 ></iframe>
 
-TODO TBD This will be done in 3 simple steps:
+It will only need two simple steps:
 
-1. Create component structure
-2. Find matching component
-3. Map properties
+1. Component definition, and
+2. Component creation
 
 ## Requirements
 
 This guide assumes that you already have a working Design System, that is based on **kickstartDS**, running.<br/>
-If that's not the case, follow our guide [Create your Design System](../../create/index.mdx).
+If that's not the case, follow our [Create your Design System](../../create/index.mdx) guide.
 
 ## 1. Component Definition
 
