--- a/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
@@ -78,6 +78,8 @@ export default {
 };
 ```
 
+For a detailed explanation on how to add this to your project, have a look [at part three of our "Create your Design System"](../../guides/create/storybook.mdx#install-remaining-addons) guide.
+
 ### Advanced configuration
 
 This addon is still early, advanced configuration options will be added at a later date. Feel free to let us know in the issues if something specific is unclear, or doesn't work!
