--- a/packages/tools/docusaurus/docs/integration/storybook/theming.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/theming.mdx
@@ -67,5 +67,6 @@ Have a look at our very own **kickstartDS** instance to see our colors (as an ex
 />
 
 <br />
+<br />
 
-To learn how to use this in your own **Storybook**, have a look at [part three of our "Create your Design System"](../../guides/create/storybook.mdx) guide for an in-depth explanation.
+To learn how to use this in your own **Storybook**, have a look at [part three of our "Create your Design System"](../../guides/create/storybook.mdx#add-storybook-theming) guide for an in-depth explanation.
