--- a/packages/tools/docusaurus/docs/integration/storybook/token.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/token.mdx
@@ -17,9 +17,10 @@ We also provide ready-to-use docs pages for **Storybook**, using the `DesignToke
   alt="Image showing the Design Token addon in action"
 />
 
-You can find those [in our mono-repository](https://github.com/kickstartDS/kickstartDS/tree/feature/docs/packages/components/core/source/design-tokens), or have a look at them in action on [our own hosted **Storybook**](https://www.kickstartds.com/storybook/?path=/story/design-tokens-colors--page) (category `DESIGN TOKENS` in the sidebar).
+<br />
+<br />
 
-For a detailed explanation on how to add those to your project, have a look [at part three of our "Create your Design System"](../../guides/create/storybook.mdx#design-token-integration) guide.
+You can find those [in our mono-repository](https://github.com/kickstartDS/kickstartDS/tree/feature/docs/packages/components/core/source/design-tokens), or have a look at them in action on [our own hosted **Storybook**](https://www.kickstartds.com/storybook/?path=/story/design-tokens-colors--page) (category `DESIGN TOKENS` in the sidebar).
 
 ## Component Token integration
 
@@ -86,6 +87,8 @@ export default {
   },
 } as Meta;
 ```
+
+For a more detailed description of this integration, have a look at [part three of our "Create your Design System" guide](../../guides/create/storybook.mdx#install-remaining-addons).
 
 ##### Adding to DocsPage and MDX
 
