--- a/packages/tools/docusaurus/docs/guides/components/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/create.mdx
@@ -15,7 +15,7 @@ TODO: see Examples > Components > Interstitial for the steps that should be expl
 <Admonition type="tip" title="Adaptation process as a base line">
   If you've read our guide ["Adapt a component"](./adapt.mdx) you probably already know this:
 
-This guide expects you to reduce the set of props offered by **kickstartDS** components, when used as a base component. Feel free to have a look at that guide first, if unsure.
+This guide expects you to reduce the set of props offered by **kickstartDS** components, when used as a base component. We'll also skip over, or significantly shorten, parts already covered by that guide. If unsure about something, best cross-reference it!
 
 </Admonition>
 
