--- a/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
@@ -35,6 +35,9 @@ Our premade **Design Token** stories showcase your **Design Token** set instantl
   alt="Image showing the Design Token addon in action"
 />
 
+<br />
+<br />
+
 See the integration page about ["Design & Component Token" in this very section](./token.mdx#design-token-integration) to see a detailed description, and how you'd use them for your own Design System.
 
 ### 2. Premade component stories
@@ -65,6 +68,7 @@ export default {
   args,
   argTypes,
   parameters: {
+    ...ButtonStories.parameters,
     jsonschema: schema,
   },
 };
@@ -94,6 +98,7 @@ export default {
   args,
   argTypes,
   parameters: {
+    ...ButtonStories.parameters,
     jsonschema: schema,
   },
 };
@@ -107,7 +112,7 @@ export default {
 Destructure them into your `default` export as defaults, and overwrite just what you want to need to.
 
 <CH.Code>
-```jsx src/components/button/Button.stories.jsx focus=11
+```jsx src/components/button/Button.stories.jsx focus=11,16
 import { Button } from "./ButtonComponent";
 import { pack, getArgsShared } from "@kickstartds/core/lib/storybook/helpers";
 import ButtonStories from "@kickstartds/base/lib/button/button.stories";
@@ -123,6 +128,7 @@ export default {
   args,
   argTypes,
   parameters: {
+    ...ButtonStories.parameters,
     jsonschema: schema,
   },
 };
@@ -134,7 +140,9 @@ That's it, and as always this should help you focus on the important details! Ha
 
 This also works when working with more than one component:
 
-#### Complex example `Section`
+#### Complex example `Page`
+
+TODO describe Recipe / Page usage and consumption of multiple Stories for easier / faster prototyping
 
 For a more complex example, involving multiple base components see the `Section` we've created in our ["Create your Design System" guide](../../guides/create/components.mdx):
 
